# uiautomator2-mcp

./: Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml
project_doc/: tech-specs.md
project_docs/: debug_log.md  overview.md  requirements.md  tech-specs.md  timeline.md  user-structure.md
src/: server.py
src/mcp_android/: __init__.py  android.py  app.py  ocr.py  ui.py
tests/: test_init.py  test_mcp_tools.py
